--- a/Page1.html
+++ b/Page1.html
@@ -4,21 +4,81 @@
 
 </head>
 <body>
+    <header>
+        <marquee>
+            <p>
+                <b> Todays offer on sony led TV is 10%</b>
+            </p>
+        </marquee>
+    </header>
     <nav>
         <ul id="menu">
             <li>
-                <a href="">Home</a>
+                <a href="Home.html">Home</a>
             </li>
             <li>
-                <a href="">About</a>
+                <a href="AboutUs.html">About</a>
             </li>
             <li>
-                <a href="">Contacts</a>
+                <a href="ContactUs.html">Contacts</a>
             </li>
         </ul>
     </nav>
     <section id="banner">
-
+        <h1>Welcome to Indias biggest sale</h1>
     </section>
+    <section class="left-panel">
+        <ul>
+            <li>Electronics</li>
+            <li>furniture</li>
+            <li>Sports</li>
+
+        </ul>
+    </section>
+    <section class="Main-content">
+        <table>
+            <tr>
+                <td>
+                    <img src="Electronics.jpg" />
+
+                </td>
+                <td>
+                    <img src="Electronics2.jpg" />
+
+                </td>
+
+            </tr>
+            <tr>
+                <td>
+                    <img src="furniture.jpg" />
+
+                </td>
+                <td>
+                    <img src="Furniture2.jpg" />
+
+                </td>
+
+            </tr>
+            <tr>
+                <td>
+                    <img src="Sports.jpg" />
+
+                </td>
+                <td>
+                    <img src="Sports2.jpg" />
+
+                </td>
+
+            </tr>
+        </table>
+    </section>
+    <footer class="footer">
+        <p>
+            &COPY;copy rights to e-comm website. powered by ThinkQ. Year 2022
+        </p>
+
+    </footer>
+
+
 </body>
 </html>
