--- a/Assignment/Ehome.html
+++ b/Assignment/Ehome.html
@@ -29,6 +29,12 @@
                         <a class="nav-link active" style="color: rgb(60 156 161)" aria-current="page" href="Contact.html">Contact us</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" style="color: rgb(60 156 161)" aria-current="page" href="Register.html">Sign in</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" style="color: rgb(60 156 161)" aria-current="page" href="LoginPage.html">Login</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" style="color: rgb(60 156 161)" aria-current="page" href="AboutUs.html">About us</a>
                     </li>
 
