--- a/Assignment/AboutUs.html
+++ b/Assignment/AboutUs.html
@@ -23,7 +23,12 @@
         <li class="nav-item">
             <a class="nav-link" href="Contact.html">Contact us</a>
         </li>
-        
+        <li class="nav-item">
+            <a class="nav-link" href="Register.html">Sign in</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="LoginPage.html">Login</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link disabled">About</a>
         </li>
