--- a/Assignment/Contact.html
+++ b/Assignment/Contact.html
@@ -25,6 +25,12 @@
             <a class="nav-link disabled">Contact us</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="Register.html">Sign in</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="LoginPage.html">Login</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="AboutUs.html">About</a>
         </li>
     </ul>
