--- a/Assignment/LoginPage.html
+++ b/Assignment/LoginPage.html
@@ -42,31 +42,82 @@
 </head>
 <body>
 
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="Dashboard.html">Account</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Ehome.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Contact.html">Contact us</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="Register.html">Sign in</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled"  >Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="AboutUs.html">About us</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
     <section id="banner">
         <p id="twitter">Twitter</p>
 
     </section>
-    <div style="margin-left:400px">
-        <p>
-            <h3 style="color:Highlight">Sign in to twitter</h3>
-        </p>
-        <div class="mb-3" style="width:300px">
+    <form action="Dashboard.html">
+        <div style="margin-left:400px">
+            <p>
+                <h3 style="color:Highlight">Sign in to twitter</h3>
+            </p>
+            <div class="mb-3" style="width:300px">
 
-            <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+
+            <div class="mb-3" style=width:300px>
+
+                <label for="exampleFormControlInput2" class="form-label">Password</label>
+                <input type="password" class="form-control" id="exampleFormControlInput2" placeholder="password">
+            </div>
+            <p>
+                <button type="submit" class="btn btn-info" onclick="validate()">Login</button>      <button type="button" class="btn btn-secondary">Cancel</button>
+
+
+            </p>
         </div>
-
-        <div class="mb-3" style=width:300px>
-
-            <label for="exampleFormControlInput2" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleFormControlInput2" placeholder="password">
-        </div>
-        <p>
-            <button type="button" class="btn btn-info">Login</button>      <button type="button" class="btn btn-secondary">Cancel</button>
-
-
-        </p>
-    </div>
+    </form>
+    <script>
+        function validate() {
+            var email = document.getElementById("exampleFormControlInput1").value;
+            var pass = document.getElementById("exampleFormControlInput2").value;
+            var emailStorage = localStorage.getItem("emailid");
+            var passStorage = localStorage.getItem("password");
+            if (email == emailStorage && pass == passStorage) {
+                alert("login sucessfilly");
+                return true;
+            }
+            else {
+                alert("Fail to login");
+                return false;
+            }
+        }
+    </script>
     <footer class="footer">
         <p>
             &COPY;copy rights to website. powered by Twitter. Year 2015
