--- a/bootsDemo.html
+++ b/bootsDemo.html
@@ -7,8 +7,10 @@
 
 </head>
 <body>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-success">Success</button>
+   
+
+
+    <p> hello everyone</p>
 
 
 
